--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
         <span>({{post_url}})</span>
       </div>
       <div class="meta">
-        <a href="/post/{{id}}"></a>
+        <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
       </div>
     </article>
   </li>
