--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,14 @@
     <article class="post">
       <div class="title">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{format_url post_url}})</span>
-      </div>
+         <a href="/post/{{id}}">{{title}} {{format_plural "comment" comments.length}}</a>
+         </div>
+         <div class="body">
+        {{post_url}}
+        </div>
       <div class="meta">
-        <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+        <strong>Posted by {{user.username}}
+          on {{format_date created_at}}
+        </strong>
+       
       </div>
     </article>
