added post texts and new post handlebar

--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,9 +1,9 @@
     <article class="post">
       <div class="title">
-         <a href="/post/{{id}}">{{title}} {{format_plural "comment" comments.length}}</a>
+         <a href="/post/{{id}}">{{title}}</a>
          </div>
          <div class="body">
-        {{post_url}}
+        {{post_text}}
         </div>
       <div class="meta">
         <strong>Posted by {{user.username}}
