--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,19 +1,5 @@
 
-<section>
-  <h2>Create New Post</h2>
 
-  <form class="new-post-form">
-    <div>
-      <label for="post-title">Title</label>
-      <input type="text" id="post-title" name="post-title" />
-    </div>
-    <div>
-      <label for="post-url">Link</label>
-      <input id="post-url" name="post-url" />
-    </div>
-    <button type="submit" class="btn">Create</button>
-  </form>
-</section>
 
 {{#if posts.length}}
 <section>
@@ -29,4 +15,7 @@
 </section>
 {{/if}}
 
-<script src="/javascript/add-post.js"></script>
+<div>
+      <button type="submit"><a href="/dashboard/newpost" class="btn">Create New Post</button>
+</div>
+
