--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -6,15 +6,12 @@
   <form class="edit-post-form">
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
-      <span>({{format_url post.post_text}})</span>
+      <textarea name="post-text" type="text">({{post.post_text}})</textarea>
     </div>
     <div>
-      {{post.vote_count}} {{format_plural "point" post.vote_count}} by you on {{format_date post.created_at}}
-      |
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
+      <button type="submit">Save post</button>
+      <button type="button" class="delete-post-btn">Delete post</button>
     </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
   </form>
 </article>
 
@@ -24,7 +21,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button type="submit">Add Comment</button>
   </div>
 </form>
 
