--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,21 +1,25 @@
-
-
-
 {{#if posts.length}}
 <section>
   <h2>Your Posts</h2>
-  <ol>
+    <ol>
     {{#each posts as |post|}}
-    <li>
-      {{> post-info post}}
-      <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-    </li>
-    {{/each}}
-  </ol>
-</section>
+  <ul>
+    <article class="post">
+      <div class="title">
+        <a href="/post/{{id}}">{{title}}</a>
+      </div>
+      <div class="meta">
+        <strong>Posted by {{user.username}} on {{format_date created_at}}</strong>
+      </div>
+    </article>
+    <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+  </ul>
+   {{/each}}
+    </ol>
+    </section>
+   
 {{/if}}
 
 <div>
-      <button type="submit"><a href="/dashboard/newpost" class="btn">Create New Post</button>
+  <button type="submit"><a href="/dashboard/newpost" class="btn">Create New Post</button>
 </div>
-
