--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 a:hover {
-  color: darkblue;
+  color:  lightgrey;
 }
 
 button {
@@ -41,11 +41,13 @@ button:hover {
 .post-list {
   margin: 0;
   padding: 0;
+  list-style-type: none;
+
 }
 
 textarea,
 input {
-  padding: 0.5%;
+  padding: 1%;
   border-radius: 5px;
   border: 1px solid #ccc;
 }
@@ -88,7 +90,7 @@ header {
   margin: 0;
 }
 
-header h1 {
+header h1  {
   font-size: 2.5em;
   padding: 10px 15px 10px 15px;
   margin: 25px 0 25px 0;
@@ -136,6 +138,12 @@ main {
 .post {
   margin-bottom: 2%;
   line-height: 150%;
+  border: 2px solid #3486eb;
+  border-radius: 5px;
+  display: grid;
+  justify-content: left;
+  box-shadow: 0 8px 6px -6px black;
+  background-color: darkgray;
 }
 
 .post .title span {
@@ -186,4 +194,19 @@ footer {
   justify-content: center;
   padding: 1%;
   font-size: 110%;
+}
+
+.btn {
+  color: whitesmoke;
+}
+
+#container {
+  width: 100%; margin: 0 auto;
+}
+
+
+section h2 {
+  padding: 10px 15px 10px 15px;
+  margin: 30px 0 30px 0;
+  color: #3486eb;
 }
