--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,25 +1,24 @@
 {{#if posts.length}}
 <section>
-  <h2>Your Posts</h2>
-    <ol>
+  <div>
+    <h2>Your Dashboard</h2>
+  </div>
+  <ol>
     {{#each posts as |post|}}
-  <ul>
-    <article class="post">
-      <div class="title">
-        <a href="/post/{{id}}">{{title}}</a>
+    <ul>
+      <article class="post">
+        <div class="title">
+          <a href="/post/{{id}}">{{title}}</a><span><strong>Posted by {{user.username}} on
+              {{format_date created_at}}</strong></span>
+        </div>
+      </article>
+      <div>
+        <button type="submit"><a href="/dashboard/edit/{{post.id}}" class="btn">Edit post</a>
+          <button type="submit"><a href="/dashboard/newpost" class="btn">Create New Post</button>
       </div>
-      <div class="meta">
-        <strong>Posted by {{user.username}} on {{format_date created_at}}</strong>
-      </div>
-    </article>
-    <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-  </ul>
-   {{/each}}
-    </ol>
-    </section>
-   
-{{/if}}
+    </ul>
+    {{/each}}
+  </ol>
+</section>
 
-<div>
-  <button type="submit"><a href="/dashboard/newpost" class="btn">Create New Post</button>
-</div>
+{{/if}}
