--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,14 +1,11 @@
-    <article class="post">
-      <div class="title">
-         <a href="/post/{{id}}">{{title}}</a>
-         </div>
-         <div class="body">
-        {{post_text}}
-        </div>
-      <div class="meta">
-        <strong>Posted by {{user.username}}
-          on {{format_date created_at}}
-        </strong>
-       
-      </div>
-    </article>
+<article class="post">
+  <div class="title">
+    <a href="/post/{{id}}">{{title}}</a>
+    <span><strong>by {{user.username}}
+        on {{format_date created_at}}
+      </strong> </span>
+  </div>
+  <div class="body posts">
+    {{post_text}}
+  </div>
+</article>
